.provarCaches/00D410000011HE0EAM/objects/rstk__sopdq__c.object
<CustomObject>
    <description>sopdq__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sopdq_frqty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the From Qty for this Promotion Price Break</inlineHelpText>
        <label>From Qty</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sopdq_price__c</fullName>
        <inlineHelpText>This is the Price for this Promotion</inlineHelpText>
        <label>Price</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sopdq_sopd__c</fullName>
        <inlineHelpText>This is the Product associated with this Promotion</inlineHelpText>
        <label>Date Pricing</label>
        <referenceTo>rstk__sopd__c</referenceTo>
        <relationshipName>sopdqs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__sopdq_toqty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the To Qty for this Promotion Price Break</inlineHelpText>
        <label>To Qty</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>SO Date Pricing Details</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SOPDQ Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SO Date Pricing Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>